<resources>
    <string name="app_name">Калькулятор</string>
    <string name="delete">C</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="backspace">DEL</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="point">.</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="calc">=</string>
</resources>
